<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:contentDescription="@string/favorite"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFavorite"
                android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/name"
            style="@style/TertiaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TertiaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAdd"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="#FF5722"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_add"
            android:tint="@color/white"
            app:contentPadding="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price"
            app:shapeAppearanceOverlay="@style/CornerIcon" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMinus"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:background="#F8987A"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_minus"
            android:tint="@color/white"
            app:contentPadding="3dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price"
            app:shapeAppearanceOverlay="@style/CornerIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>